--- a/CPMobile/CPMobile/CPMobile.iOS/CPMobile.iOS.csproj
+++ b/CPMobile/CPMobile/CPMobile.iOS/CPMobile.iOS.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="Renderers\CarouselLayoutRenderer.cs" />
+    <Compile Include="Renderers\MenuTableViewRenderer.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
