--- a/CPMobile/CPMobile/CPMobile.Droid/CPMobile.Droid.csproj
+++ b/CPMobile/CPMobile/CPMobile.Droid/CPMobile.Droid.csproj
@@ -98,6 +98,9 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\icon.png" />
     <AndroidResource Include="Resources\values\styles.xml" />
     <AndroidResource Include="Resources\values\color.xml" />
+    <AndroidResource Include="Resources\drawable\chat.png" />
+    <AndroidResource Include="Resources\drawable\dome.png" />
+    <AndroidResource Include="Resources\drawable\pindrop.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\AndroidManifest.xml" />
