--- a/CPMobile/CPMobile/CPMobile/CPMobile.csproj
+++ b/CPMobile/CPMobile/CPMobile/CPMobile.csproj
@@ -36,17 +36,28 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="Controls\CarouselLayout.cs" />
+    <Compile Include="Helper\ForumListData.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Helper\JsonHelper.cs" />
     <Compile Include="Helper\Settings.cs" />
     <Compile Include="Helper\StringHelper.cs" />
     <Compile Include="Models\Article.cs" />
+    <Compile Include="Models\AuthorReputation.cs" />
     <Compile Include="Models\CPAuthToken.cs" />
-    <Compile Include="Models\ICPFeeds.cs" />
+    <Compile Include="Models\ForumType.cs" />
+    <Compile Include="Models\ICPFeeds.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Models\Login.cs" />
+    <Compile Include="Models\MyProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\CPFeedService.cs" />
     <Compile Include="Style\AppStyle.cs" />
     <Compile Include="Style\CPListCell.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Style\CustomListStyle.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Style\DetailsView.cs" />
@@ -62,27 +73,46 @@
     <Compile Include="ViewModels\ArticleViewModel.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ViewModels\AuthorArticleViewModel.cs" />
+    <Compile Include="ViewModels\AuthorDataViewModel.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ViewModels\ForumDetailsViewModel.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="ViewModels\ForumViewModel.cs" />
     <Compile Include="Style\PagerIndicatorTabs.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ViewModels\ProfileViewModel.cs" />
     <Compile Include="ViewModels\SwitcherPageViewModel.cs" />
     <Compile Include="ViewModels\TabbedPageViewModel.cs" />
     <Compile Include="Views\ArticleListPage.cs" />
-    <Compile Include="Views\ForumListPage.cs" />
-    <Compile Include="Views\HomeView.cs" />
+    <Compile Include="Views\AuthorArticlePage.cs" />
+    <Compile Include="Views\ForumDetailListPage.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Views\ForumListPage.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Views\Profile.cs" />
     <Compile Include="Views\RootPage.cs" />
     <Compile Include="Style\MainListCell.cs" />
     <Compile Include="Views\LoginPage.cs" />
     <Compile Include="Views\MainListPage.cs" />
-    <Compile Include="Views\MasterPage.cs" />
     <Compile Include="Views\MenuPage.cs" />
     <Compile Include="Models\ILoginManager.cs" />
+    <Compile Include="Views\WebViewPage.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Akavache">
+      <HintPath>..\..\packages\akavache.core.4.1.1\lib\Portable-Net45+Win8+WP8+Wpa81\Akavache.dll</HintPath>
+    </Reference>
+    <Reference Include="Akavache.Sqlite3">
+      <HintPath>..\..\packages\akavache.sqlite3.4.1.1\lib\Portable-Net45+Win8+WP8+Wpa81\Akavache.Sqlite3.dll</HintPath>
+    </Reference>
     <Reference Include="ExifLib, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\packages\ExifLib.PCL.1.0.0\lib\portable-net45+sl50+win+WindowsPhoneApp81+wp80+MonoAndroid10+MonoTouch10\ExifLib.dll</HintPath>
     </Reference>
@@ -97,13 +127,19 @@
       <HintPath>..\..\packages\Xam.Plugins.Settings.1.5.1\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10\Refractored.Xam.Settings.dll</HintPath>
     </Reference>
     <Reference Include="Refractored.Xam.Settings.Abstractions">
-      <HintPath>..\..\packages\Xam.Plugins.Settings.1.5.1\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10\Refractored.Xam.Settings.Abstractions.dll</HintPath>
+      <HintPath>..\..\packages\Xam.Plugins.Settings.1.5.1\lib\Xamarin.iOS10\Refractored.Xam.Settings.Abstractions.dll</HintPath>
     </Reference>
     <Reference Include="SQLite.Net, Version=3.0.5.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\packages\SQLite.Net-PCL.3.0.5\lib\portable-win8+net45+wp8+wpa81+MonoAndroid1+MonoTouch1\SQLite.Net.dll</HintPath>
     </Reference>
     <Reference Include="SQLite.Net.Async, Version=2.3.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\packages\SQLite.Net.Async-PCL.2.3.0\lib\portable-net4+sl5+netcore45+wp8+MonoAndroid1+MonoTouch1\SQLite.Net.Async.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Core">
+      <HintPath>..\..\packages\Rx-Core.2.2.5\lib\portable-net45+winrt45+wp8+wpa81\System.Reactive.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Linq">
+      <HintPath>..\..\packages\Rx-Linq.2.2.5\lib\portable-net45+winrt45+wp8+wpa81\System.Reactive.Linq.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=1.4.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\packages\Xamarin.Forms.1.4.2.6359\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Core.dll</HintPath>
